changes to puppet.conf due to migration for foreman 1.2

--- a/puppet.conf
+++ b/puppet.conf
@@ -40,7 +40,6 @@
     pluginsync  = true
     masterport  = 8140
     environment = production
-    certname    = manage.dice.cluster
     server      = manage.dice.cluster
     listen      = false
     splay       = false
@@ -52,7 +51,7 @@
 
 [master]
     autosign       = $confdir/autosign.conf { mode = 664 }
-    reports        = foreman
+    reports        = log, foreman
     external_nodes = /etc/puppet/node.rb
     node_terminus  = exec
     ca             = true
