--- a/puppet.conf
+++ b/puppet.conf
@@ -1,5 +1,4 @@
 ### File managed with puppet ###
-## Served by:        ''
 ## Module:           'puppet'
 ## Template source:  'MODULES/puppet/templates/puppet.conf.erb'
 
@@ -40,7 +39,8 @@
     pluginsync  = true
     masterport  = 8140
     environment = production
-    server      = manage.dice.cluster
+    certname    = manage.acrc.bris.ac.uk
+    server      = manage.acrc.bris.ac.uk
     listen      = false
     splay       = false
     runinterval = 1800
@@ -51,7 +51,7 @@
 
 [master]
     autosign       = $confdir/autosign.conf { mode = 664 }
-    reports        = log, foreman
+    reports        = foreman
     external_nodes = /etc/puppet/node.rb
     node_terminus  = exec
     ca             = true
