--- a/environment.conf
+++ b/environment.conf
@@ -16,3 +16,5 @@
 # environment_timeout = (environment_timeout from puppet.conf, which defaults to 0)
     # Note: unless you have a specific reason, we recommend only setting
     # environment_timeout in puppet.conf.
+modulepath          = modules:site:$basemodulepath
+config_version      = 'scripts/config_version.sh $environmentpath $environment'
