tuning of role location

--- a/environment.conf
+++ b/environment.conf
@@ -18,3 +18,4 @@
     # environment_timeout in puppet.conf.
 modulepath          = modules:site:$basemodulepath
 config_version      = 'scripts/config_version.sh $environmentpath $environment'
+manifest = site.pp
