--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -1,7 +1,7 @@
 ---
 classes:
  - 'profile::base'
- - 'profile::firewall::default_rules'
+# - 'profile::firewall::default_rules'
 
 ntp::enable: true
 ntp::servers:
