--- a/hiera.yaml
+++ b/hiera.yaml
@@ -3,6 +3,7 @@
   - yaml
 :hierarchy:
   - "nodes/%{::fqdn}"
+  - "virtual/%{::virtual}"
   - "cluster/%{::node_info.cluster}"
   - "groups/%{::node_info.group}"
   - "roles/%{::node_info.role}"
