--- a/hieradata/nodes/bc-37-01.dice.priv.yaml
+++ b/hieradata/nodes/bc-37-01.dice.priv.yaml
@@ -3,3 +3,7 @@ site::node_info:
   cluster: dice
   group: htcondor
   role: htcondor_worker
+  environment: production
+
+# this node has HT enabled and we only want to use the number of real cores
+htcondor::number_of_cpus: 12
