--- a/hiera.yaml
+++ b/hiera.yaml
@@ -3,15 +3,11 @@
   - yaml
 :hierarchy:
   - "nodes/%{::fqdn}"
-  - "virtual/%{::virtual}"
+  - "virtual/%{::is_virtual}"
   - "cluster/%{::node_info.cluster}"
   - "groups/%{::node_info.group}"
   - "roles/%{::node_info.role}"
   - common
 
 :yaml:
-# datadir is empty here, so hiera uses its defaults:
-# - /etc/puppetlabs/code/environments/%{environment}/hieradata on *nix
-# - %CommonAppData%\PuppetLabs\code\environments\%{environment}\hieradata on Windows
-# When specifying a datadir, make sure the directory exists.
-  :datadir:
+  :datadir: "/etc/puppetlabs/code/environments/%{::environment}/hieradata"
