--- a/hieradata/groups/htcondor.yaml
+++ b/hieradata/groups/htcondor.yaml
@@ -12,17 +12,17 @@ htcondor::managers:
 htcondor::schedulers:
   - lcgce01.phy.bris.ac.uk
   - lcgce02.phy.bris.ac.uk
-  - soolin.phy.bris.ac.uk
-  - mensa.star.bris.ac.uk
   - vm-astro.dice.priv
   - vm-hep.dice.priv
+  - soolin.phy.bris.ac.uk
+  - mensa.star.bris.ac.uk
+  - hyperion.phy.bris.ac.uk
 
 htcondor::workers:
   - '*.dice.priv'
   - '10.129.5.*'
-  - 'bse*.phy.bris.ac.uk'
-  - '*.hadoop.cluster'
-  - '10.129.1.*'
+  - '*.phy.bris.ac.uk'
+  - '137.222.171.*'
 
 htcondor::uid_domain: 'phy.bris.ac.uk'
 htcondor::default_domain_name: 'phy.bris.ac.uk'
