updated HTCondor CE settings

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -37,6 +37,16 @@ site::site_info:
       cvmfs_public_key: /etc/cvmfs/keys/desy.de.pub
       cvmfs_server_url: 'http://grid-cvmfs-one.desy.de:8000/cvmfs/@fqrn@;http://cvmfs-stratum-one.cern.ch:8000/cvmfs/@fqrn@;http://cvmfs-egi.gridpp.rl.ac.uk:8000/cvmfs/@fqrn@'
 
+site_info::supported_vos:
+  - alice
+  - atlas
+  - cms
+  - dteam
+  - gridpp
+  - lhcb
+  - ops
+  - 'vo.southgrid.org'
+
 cvmfs::cvmfs_quota_limit: 40000
 cvmfs::cvmfs_http_proxy: 'http://lcgsq1.phy.bris.ac.uk:3128|http://lcgsq2.phy.bris.ac.uk:3128'
 cvmfs::cvmfs_server_url: 'http://cernvmfs.gridpp.rl.ac.uk:8000/opt/@org@;http://cvmfs-stratum-one.cern.ch:8000/opt/@org@; http://cvmfs.racf.bnl.gov:8000/opt/@org@'
