--- a/hieradata/roles/htcondor_scheduler_and_ce.yaml
+++ b/hieradata/roles/htcondor_scheduler_and_ce.yaml
@@ -7,3 +7,21 @@ htcondor::is_scheduler: true
 # max CPU time in seconds
 htcondor::max_cputime: '80 * 60 * 60'
 htcondor::max_walltime: '80 * 60 * 60'
+# htcondor_ce bits
+htcondor_ce::ce_version: 'present'
+htcondor_ce::lrms: 'condor'
+htcondor_ce::lrms_version: 'present'
+htcondor_ce::manage_service: true
+# mapping
+htcondor_ce::gsi_regex: '^\/C=UK/O=eScience/OU=Bristol/L=IS/CN=?([A-Za-z0-9.\-]*)$'
+htcondor_ce::gsi_backend: 'argus'
+htcondor_ce::argus_resourceid: 'http://authz-interop.org/xacml/resource/resource-type/arc'
+# optimisation
+htcondor_ce::use_static_shadow: true
+
+# bdii settings
+htcondor_ce::install_bdii: true
+htcondor_ce::benchmark_result: '10.00-HEP-SPEC06'
+htcondor_ce::execution_env_cores: 16
+htcondor_ce::election_type: 'leader'
+htcondor_ce::election_hosts: 'lcgce02.phy.bris.ac.uk'
