added htcondor version

--- a/hieradata/groups/htcondor.yaml
+++ b/hieradata/groups/htcondor.yaml
@@ -40,4 +40,5 @@ htcondor::pool_password: 'puppet:///modules/site_private/pool_password'
 htcondor::install_repositories: false
 # disabled condor calling home
 htcondor::enable_condor_reporting: false
+htcondor::condor_version: "8.4.5-1.el6"
 
