--- a/hieradata/cluster/hadoop.yaml
+++ b/hieradata/cluster/hadoop.yaml
@@ -1,3 +1,9 @@
 ---
 # hadoop cluster is on a private network, need to use connection broker
 htcondor::uses_connection_broker: true
+
+profile::monitored::servers:
+  - 10.129.1.30
+
+profile::monitored::port: 8659
+profile::monitored::cluster_name: 'hadoop-cluster'
