--- a/hieradata/cluster/hadoop.yaml
+++ b/hieradata/cluster/hadoop.yaml
@@ -7,3 +7,7 @@ profile::monitored::servers:
 
 profile::monitored::port: 8659
 profile::monitored::cluster_name: 'hadoop-cluster'
+
+profile::monitored::central_log:
+  - 'lcgui02.phy.bris.ac.uk:514;sysklogd'
+  - 'smnat.hadoop.cluster:514;sysklogd'
