--- a/hieradata/cluster/dice.yaml
+++ b/hieradata/cluster/dice.yaml
@@ -1,6 +1,9 @@
 ---
-profile::monitored::servers:
+profile::monitored::ganglia_servers:
   - 137.222.171.36
 
-profile::monitored::port: 8649
-profile::monitored::cluster_name: 'DICE'
+profile::monitored::ganglia_port: 8649
+profile::monitored::ganglia_cluster_name: 'DICE'
+profile::monitored::central_log:
+  - '10.129.5.3:514'
+  - '10.129.5.4:514'
