--- a/hieradata/cluster/hadoop.yaml
+++ b/hieradata/cluster/hadoop.yaml
@@ -7,6 +7,7 @@ profile::monitored::ganglia_servers:
 
 profile::monitored::ganglia_port: 8659
 profile::monitored::ganglia_cluster_name: 'hadoop-cluster'
+profile::monitored::ganglia_use_multicast: true
 
 profile::monitored::central_log:
   - 'lcgui02.phy.bris.ac.uk:514;sysklogd'
