--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -50,6 +50,7 @@ site::site_info:
     - ops
     - 'vo.southgrid.org'
 
-cvmfs::cvmfs_quota_limit: 40000
+cvmfs::cvmfs_quota_limit: 30000
 cvmfs::cvmfs_http_proxy: 'http://lcgsq1.phy.bris.ac.uk:3128|http://lcgsq2.phy.bris.ac.uk:3128'
 cvmfs::cvmfs_server_url: 'http://cernvmfs.gridpp.rl.ac.uk:8000/opt/@org@;http://cvmfs-stratum-one.cern.ch:8000/opt/@org@; http://cvmfs.racf.bnl.gov:8000/opt/@org@'
+cvmfs::cvmfs_cache_base: '/condor/cvmfs'
