updating condor parameters

--- a/hieradata/roles/htcondor_manager.yaml
+++ b/hieradata/roles/htcondor_manager.yaml
@@ -3,6 +3,7 @@ classes:
   - htcondor
 
 htcondor::is_manager: true
+htcondor::use_anonymous_auth: true
 
 htcondor::high_priority_groups:
   dteam: -10
