switched back to moonitor for ganglia

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -14,6 +14,7 @@ ntp::servers:
 ntp::restrict:
   - "default nomodify notrap noquery"
   - "127.0.0.1"
+  - "restrict -6 ::1"
   
 site::site_info:
   gocdb_name: 'UKI-SOUTHGRID-BRIS-HEP'
