--- a/hiera.yaml
+++ b/hiera.yaml
@@ -1,16 +1,18 @@
 ---
 :backends:
-  - yaml
   - eyaml
+  - yaml
 
 :hierarchy:
   - "modules/site_private/hieradata/nodes/%{::fqdn}"
+  - "modules/site_private/hieradata/firewall/%{::node_info.firewall}"
   - "hieradata/virtual/%{::is_virtual}"
   - "hieradata/cluster/%{::node_info.cluster}"
   - "hieradata/generation/%{::node_info.generation}"
   - "hieradata/groups/%{::node_info.group}"
   - "hieradata/roles/%{::node_info.role}"
   - modules/site_private/hieradata/common
+  - modules/site_private/hieradata/secrets
   - hieradata/common
 
 :yaml:
