--- a/hieradata/groups/htcondor.yaml
+++ b/hieradata/groups/htcondor.yaml
@@ -1,8 +1,7 @@
 ---
 message: "This is condor!"
-# everything to do with condor needs to know all users
-classes:
-  - 'profile::users'
+site::node_info:
+  users: htcondor
 
 # common parameters
 htcondor::managers:
