--- a/hieradata/groups/dmlite.yaml
+++ b/hieradata/groups/dmlite.yaml
@@ -10,3 +10,4 @@ profile::dmlite::hdfs_port: 0
 profile::dmlite::db_host: 'lcgse01.phy.bris.ac.uk'
 profile::dmlite::localdomain: 'phy.bris.ac.uk'
 dmlite::plugins::hdfs::params::java_home: /usr/java/latest
+dmlite::gridftp::enable_hdfs: true
