added soolin.dice.priv as condor scheduler

--- a/hieradata/groups/htcondor.yaml
+++ b/hieradata/groups/htcondor.yaml
@@ -16,6 +16,7 @@ htcondor::schedulers:
   - soolin.phy.bris.ac.uk
   - mensa.star.bris.ac.uk
   - hyperion.phy.bris.ac.uk
+  - soolin.dice.priv
 
 htcondor::workers:
   - '*.dice.priv'
