added customisations from puppet master

--- a/hieradata/groups/htcondor.yaml
+++ b/hieradata/groups/htcondor.yaml
@@ -29,7 +29,7 @@ htcondor::default_domain_name: 'phy.bris.ac.uk'
 htcondor::cluster_has_multiple_domains: true
 htcondor::collector_name: 'DICE-HTCondor-Cluster'
 htcondor::cluster_has_multiple_domains: true
-htcondor::admin_email: root@localhost
+htcondor::admin_email: "root@localhost"
 htcondor::condor_user: condor
 htcondor::condor_group: condor
 htcondor::machine_owner: condor
@@ -43,4 +43,3 @@ htcondor::install_repositories: false
 # disabled condor calling home
 htcondor::enable_condor_reporting: false
 htcondor::condor_version: "latest"
-
