--- a/hieradata/roles/htcondor_scheduler.yaml
+++ b/hieradata/roles/htcondor_scheduler.yaml
@@ -1,8 +1,9 @@
 ---
 classes:
   - htcondor
+  - profile::htcondor_scheduler
 
 htcondor::is_scheduler: true
 # max CPU time in seconds
 htcondor::max_cputime: '30 * 24 * 60 * 60'
-htcondor::max_walltime: '30 * 24 *80 * 60 * 60'
+htcondor::max_walltime: '30 * 24 * 60 * 60'
