--- a/hieradata/roles/htcondor_scheduler_and_ce.yaml
+++ b/hieradata/roles/htcondor_scheduler_and_ce.yaml
@@ -2,6 +2,7 @@
 classes:
   - htcondor
   - profile::htcondor_ce
+  - profile::htcondor_scheduler
 
 htcondor::is_scheduler: true
 # max CPU time in seconds
