removing default packages for worker node -> all in stacki now

--- a/hieradata/roles/htcondor_worker.yaml
+++ b/hieradata/roles/htcondor_worker.yaml
@@ -6,11 +6,11 @@ classes:
   - 'profile::voenv'
   - profile::cgroups
 
-packages_to_install:
-  - HEP_OSlibs_SL6
-  - cmake
-  - gcc-gfortran
-  - git
+# packages_to_install:
+#   - HEP_OSlibs_SL6
+#   - cmake
+#   - gcc-gfortran
+#   - git
 
 htcondor::is_worker: true
 htcondor::enable_cgroup: true
