--- a/hieradata/roles/worker.yaml
+++ b/hieradata/roles/worker.yaml
@@ -5,7 +5,7 @@ classes:
   - 'profile::cvmfs'
   - 'profile::arc_env'
   - 'profile::voenv'
-  
+
 packages_to_install:
   - HEP_OSlibs_SL6
 
@@ -14,7 +14,7 @@ htcondor::is_worker: true
 glexecwn::argus_server: lcgarg.phy.bris.ac.uk
 glexecwn::lcg_gfal_infosys: 'lcgbdii.gridpp.rl.ac.uk:2170,topbdii.grid.hep.ph.ic.ac.uk:2170,top-bdii.tier2.hep.manchester.ac.uk:2170'
 glexecwn::myproxy_server: lcgrbp01.gridpp.rl.ac.uk
-glexecwn::user_white_list: '.alice, .alicepil, .atlas, .atlpil, .cms, .cmspil, cmssgm, cmsprd, .dteam, .ilc, .lhcb, .lhcbpil, .southgrid, .gridpp, .ops, .zeus, root, opssgm'
+glexecwn::user_white_list: '.alice, .alicpil, .atlas, .atlpil, .cms, .cmspil, cmssgm, cmsprd, .dteam, .dune, .ilc, .lhcb, .lhcbpil, .lsst, .lz, .southgrid, .gridpp, .ops, .zeus, root, opssgm'
 glexecwn::emi_version: 3
 glexecwn::glexec_permissions: 4711
 glexecwn::install_dummydpm: false
@@ -33,12 +33,21 @@ profile::voenv::vo_environments:
   dteam:
     vo_sw_dir: /software/dteam
     voname: dteam
+  dune:
+    vo_sw_dir: /cvmfs/dune.opensciencegrid.org
+    voname: dune
   gridpp:
     vo_sw_dir: /software/gridpp
     voname: gridpp
   lhcb:
     vo_sw_dir: /cvmfs/lhcb.cern.ch
     voname: lhcb
+  lsst:
+    vo_sw_dir: /cvmfs/lsst.opensciencegrid.org
+    voname: lsst
+  lz:
+    vo_sw_dir: /cvmfs/lz.opensciencegrid.org
+    voname: lz
   ilc:
     vo_sw_dir: /cvmfs/ilc.desy.de
     voname: ilc
@@ -51,4 +60,3 @@ profile::voenv::vo_environments:
   landslides:
     vo_sw_dir: /cvmfs/landslides.cern.ch
     voname: vo_landslides_mossaic_org
-    
