--- a/hieradata/roles/worker.yaml
+++ b/hieradata/roles/worker.yaml
@@ -14,11 +14,12 @@ htcondor::is_worker: true
 glexecwn::argus_server: lcgarg.phy.bris.ac.uk
 glexecwn::lcg_gfal_infosys: 'lcgbdii.gridpp.rl.ac.uk:2170,topbdii.grid.hep.ph.ic.ac.uk:2170,top-bdii.tier2.hep.manchester.ac.uk:2170'
 glexecwn::myproxy_server: lcgrbp01.gridpp.rl.ac.uk
-glexecwn::user_white_list: '.alice, .alicpil, .atlas, .atlpil, .atlspil, .cms, .cmspil, cmssgm, cmsprd, .dteam, .dune, .ilc, .lhcb, .lhcbpil, .lsst, .lz, .southgrid, .gridpp, .ops, .zeus, root, opssgm'
+glexecwn::user_white_list: ".alice, .alicpil, .atlas, .atlspil, .cms, .cmspil, cmssgm, cmsprd, .dteam, .dpil, .dune, .dnpil, .gridpp, .gpil, .ilc, .ipil, .lhcb, .lhcbpil, .lsl, .lpil, .lsst, .lspil, .lz, .lzpil, .ops, .opil, opssgm, .southgrid, .spil, .zeus, root"
 glexecwn::emi_version: 3
 glexecwn::glexec_permissions: 4711
 glexecwn::install_dummydpm: false
 glexecwn::supported_vos: []
+glexecwn::install_emi_wn: false
 
 profile::voenv::vo_environments:
   alice:
