increased proxy delegation time from 24h to 72h

--- a/site/profile/files/99_htcondor_extras.conf
+++ b/site/profile/files/99_htcondor_extras.conf
@@ -4,3 +4,6 @@ SEC_READ_AUTHENTICATION_METHODS = FS,PASSWORD,ANONYMOUS
 
 SEC_DEFAULT_INTEGRITY  = OPTIONAL
 SEC_DEFAULT_ENCRYPTION = OPTIONAL
+
+DELEGATE_JOB_GSI_CREDENTIALS_LIFETIME = 259200
+
