--- a/hieradata/groups/htcondor.yaml
+++ b/hieradata/groups/htcondor.yaml
@@ -45,3 +45,4 @@ htcondor::enable_condor_reporting: false
 htcondor::condor_version: "8.4.11-1.el6"
 
 htcondor::mount_under_scratch_dirs: []
+htcondor::manage_selinux: false
