--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -34,7 +34,7 @@ site::site_info:
     cms.cern.ch:
       cvmfs_quota_limit: 20000
       cvmfs_env_variables:
-        CMS_LOCAL_SITE: /opt/cvmfs/cms.cern.ch/SITECONF/local
+        CMS_LOCAL_SITE: T2_UK_SGrid_Bristol
     lhcb.cern.ch:
       cvmfs_quota_limit: 10000
     ilc.desy.de:
