--- a/hieradata/roles/htcondor_worker.yaml
+++ b/hieradata/roles/htcondor_worker.yaml
@@ -44,6 +44,7 @@ singularity::bind_paths:
   - /software
   - /condor/condor
   - /usr/libexec/condor
+  - /etc/hadoop
 singularity::user_bind_control: 'yes'
 singularity::enable_overlay: 'try'
 singularity::mount_slave: 'yes'
