changing condor_version requirement to "present"

--- a/hieradata/groups/htcondor.yaml
+++ b/hieradata/groups/htcondor.yaml
@@ -42,7 +42,7 @@ htcondor::pool_password: 'puppet:///modules/site_private/pool_password'
 htcondor::install_repositories: false
 # disabled condor calling home
 htcondor::enable_condor_reporting: false
-htcondor::condor_version: "8.4.11-1.el6"
+htcondor::condor_version: "present"
 
 htcondor::mount_under_scratch_dirs: []
 htcondor::manage_selinux: false
