enable multicore on condor managers

--- a/hieradata/roles/htcondor_manager.yaml
+++ b/hieradata/roles/htcondor_manager.yaml
@@ -4,6 +4,7 @@ classes:
 
 htcondor::is_manager: true
 htcondor::use_anonymous_auth: true
+htcondor::enable_multicore: true
 
 htcondor::high_priority_groups:
   dteam: -10
