--- a/hieradata/roles/htcondor_worker.yaml
+++ b/hieradata/roles/htcondor_worker.yaml
@@ -29,6 +29,7 @@ htcondor::singularity_bind_paths:
   - /users
   - /usersc
   - /condor/condor
+  - /opt/cloudera
 
 singularity::package_ensure: present
 singularity::package_name: singularity-runtime
