--- a/hieradata/roles/htcondor_worker.yaml
+++ b/hieradata/roles/htcondor_worker.yaml
@@ -29,7 +29,7 @@ htcondor::singularity_bind_paths:
   - /users
   - /usersc
   - /condor/condor
-  - /opt/cloudera
+  - /opt
 
 singularity::package_ensure: present
 singularity::package_name: singularity-runtime
@@ -60,6 +60,7 @@ singularity::bind_paths:
   - /condor/condor
   - /usr/libexec/condor
   - /etc/hadoop
+  - /opt/cloudera
 singularity::user_bind_control: 'yes'
 singularity::enable_overlay: 'try'
 singularity::mount_slave: 'yes'
