added CVMFS to htcondor-singularity bind paths (singularity.conf does not work)

--- a/hieradata/roles/htcondor_worker.yaml
+++ b/hieradata/roles/htcondor_worker.yaml
@@ -25,6 +25,7 @@ htcondor::starter_job_environment:
 htcondor::singularity_path: '/etc/condor/singularity_wrapper'
 htcondor::singularity_bind_paths:
   - /hdfs
+  - /cvmfs
   - /software
   - /users
   - /usersc
