corrected rsyslog.d/00_docker.conf

--- a/site/role/files/etc/rsyslog.d/00_docker.conf
+++ b/site/role/files/etc/rsyslog.d/00_docker.conf
@@ -1,1 +1,5 @@
-:msg, contains, "docker0: port" ~
+:msg, contains, "docker0: port" stop
+
+:msg, contains, "containerd" stop
+
+:msg, contains, "veth" stop
