--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -1,7 +1,7 @@
 ---
 message: "This is our common yaml file"
 classes:
- - site
+ - site::basic
  - 'profile::base'
  - 'profile::monitored'
 # - 'profile::firewall::setup'
