--- a/hiera.yaml
+++ b/hiera.yaml
@@ -9,7 +9,7 @@ hierarchy:
   - name: "Top level private site settings"
     datadir: modules/site_private/hieradata
     paths:
-      - "nodes/%{::fqdn}.yaml"
+      - "nodes/%{::trusted.certname}.yaml"
       - "firewall/%{::node_info.firewall}.yaml"
       - "users/%{::node_info.users}.yaml"
   - name: "Top level public site settings"
@@ -29,6 +29,7 @@ hierarchy:
     lookup_key: eyaml_lookup_key
     options:
       pkcs7_private_key: /etc/puppetlabs/puppet/secure/keys/private_key.pkcs7.pem
-      pkcs7_public_key:  /etc/puppetlabs/puppet/secure/keys/public_key.pkcs7.pem
+      pkcs7_public_key: /etc/puppetlabs/puppet/secure/keys/public_key.pkcs7.pem
   - name: "Common public site settings"
+    datadir: hieradata
     path: common.yaml
