--- a/hieradata/roles/htcondor_ce.yaml
+++ b/hieradata/roles/htcondor_ce.yaml
@@ -1,7 +1,7 @@
 
-htcondor_ce::pool_collectors:
-  - htc00.dice.priv
-  - htc01.dice.priv
+classes:
+  - profile::htcondor_ce
+
 htcondor_ce::condor_view_hosts: ['lcgce02.phy.bris.ac.uk']
 htcondor_ce::job_routes_template: 'htcondor_ce/job_routes.conf.erb'
 htcondor_ce::uid_domain: $::domain
@@ -12,12 +12,8 @@ htcondor_ce::lrms_version: present
 htcondor_ce::gsi_regex: '^\/DC\=ch\/DC\=cern\/OU\=computers\/CN\=(host\/)?([A-Za-z0-9.\-]*)$'
 htcondor_ce::manage_service: true
 htcondor_ce::gsi_backend: 'argus'
-htcondor_ce::argus_server: 'lcgarg.phy.bris.ac.uk'
-htcondor_ce::argus_port: 8154
 htcondor_ce::argus_resourceid: 'http://authz-interop.org/xacml/resource/resource-type/arc'
 htcondor_ce::install_bdii: true
-htcondor_ce::supported_vos: ['atlas', 'dteam', 'lhcb' ]
-htcondor_ce::goc_site_name: 'UKI-SOUTHGRID-BRIS-HEP'
 htcondor_ce::benchmark_result: '09.99-HEP-SPEC06'
 htcondor_ce::execution_env_cores: 8
 htcondor_ce::election_type: 'leader'
