--- a/hieradata/roles/htcondor_ce.yaml
+++ b/hieradata/roles/htcondor_ce.yaml
@@ -18,3 +18,4 @@ htcondor_ce::benchmark_result: '09.99-HEP-SPEC06'
 htcondor_ce::execution_env_cores: 8
 htcondor_ce::election_type: 'leader'
 htcondor_ce::election_hosts: $::fqdn
+htcondor_ce::apel_scaling_attr: MachineAttrACCOUNTING_SCALE_FACTOR0
