fixed htcondor-ce election hosts

--- a/hieradata/roles/htcondor_ce.yaml
+++ b/hieradata/roles/htcondor_ce.yaml
@@ -17,5 +17,5 @@ htcondor_ce::install_bdii: true
 htcondor_ce::benchmark_result: '09.99-HEP-SPEC06'
 htcondor_ce::execution_env_cores: 8
 htcondor_ce::election_type: 'leader'
-htcondor_ce::election_hosts: $::fqdn
+htcondor_ce::election_hosts: 'lcgce02.phy.bris.ac.uk'
 htcondor_ce::apel_scaling_attr: MachineAttrACCOUNTING_SCALE_FACTOR0
