--- a/hieradata/roles/htcondor_ce.yaml
+++ b/hieradata/roles/htcondor_ce.yaml
@@ -15,7 +15,7 @@ htcondor_ce::gsi_backend: 'argus'
 htcondor_ce::argus_resourceid: 'http://authz-interop.org/xacml/resource/resource-type/arc'
 htcondor_ce::install_bdii: true
 htcondor_ce::install_apel: true
-htcondor_ce::benchmark_result: '09.99-HEP-SPEC06'
+htcondor_ce::benchmark_result: '10.00'
 htcondor_ce::execution_env_cores: 8
 htcondor_ce::election_type: 'leader'
 htcondor_ce::election_hosts: 'lcgce02.phy.bris.ac.uk'
