--- a/hieradata/roles/htcondor_ce.yaml
+++ b/hieradata/roles/htcondor_ce.yaml
@@ -21,6 +21,7 @@ htcondor_ce::execution_env_cores: 8
 htcondor_ce::election_type: 'leader'
 htcondor_ce::election_hosts: 'lcgce02.phy.bris.ac.uk'
 htcondor_ce::apel_scaling_attr: ACCOUNTING_SCALE_FACTOR
+htcondor_ce::apel_use_test_queue: false
 htcondor_ce::job_routes:
   dice_centos7:
     TargetUniverse: 5
