--- a/hieradata/roles/htcondor_ce.yaml
+++ b/hieradata/roles/htcondor_ce.yaml
@@ -12,6 +12,7 @@ htcondor_ce::lrms_version: present
 htcondor_ce::gsi_regex: '^\/DC\=ch\/DC\=cern\/OU\=computers\/CN\=(host\/)?([A-Za-z0-9.\-]*)$'
 htcondor_ce::manage_service: true
 htcondor_ce::gsi_backend: 'argus'
+htcondor_ce::hostDN: "/C=UK/O=eScience/OU=Bristol/L=IS/CN=lcgce02.phy.bris.ac.uk"
 htcondor_ce::argus_resourceid: 'http://authz-interop.org/xacml/resource/resource-type/arc'
 htcondor_ce::install_bdii: true
 htcondor_ce::install_apel: true
@@ -22,11 +23,35 @@ htcondor_ce::election_type: 'leader'
 htcondor_ce::election_hosts: 'lcgce02.phy.bris.ac.uk'
 htcondor_ce::apel_scaling_attr: ACCOUNTING_SCALE_FACTOR
 htcondor_ce::apel_use_test_queue: false
-htcondor_ce::job_routes:
-  dice_centos7:
+
+# instead of using JOB_ROUTER_DEFAULTS, make every route explicit for debugging
+htcondor_ce::job_routes_base_settings:
     TargetUniverse: 5
     eval_set_AccountingGroup: 'strcat("group_u_", x509userproxyvoname, ".", Owner)'
     delete_SUBMIT_Iwd: true
     set_WantIOProxy: true
     set_default_maxMemory: 3000
     set_Requirements: 'TARGET.OpSysAndVer == "CentOS7"'
+htcondor_ce::job_routes:
+  dice_atlas_centos7:
+    Requirements: '(x509UserProxyVOName == "atlas");'
+  dice_cms_centos7:
+    Requirements: '(x509UserProxyVOName == "cms");'
+  dice_dune_centos7:
+    Requirements: '(x509UserProxyVOName == "dune");'
+  dice_gridpp_centos7:
+    Requirements: '(x509UserProxyVOName == "gridpp");'
+  dice_lhcb_centos7:
+    Requirements: '(x509UserProxyVOName == "lhcb");'
+  dice_lsst_centos7:
+    Requirements: '(x509UserProxyVOName == "lsst");'
+  dice_lz_centos7:
+    Requirements: '(x509UserProxyVOName == "lz");'
+  dice_ops_centos7:
+    Requirements: '(x509UserProxyVOName == "ops");'
+  dice_ilc_centos7:
+    Requirements: '(x509UserProxyVOName == "ilc");'
+  dice_mu3e_centos7:
+    Requirements: '(x509UserProxyVOName == "mu3e");'
+  dice_other_centos7:
+    Requirements: '(x509UserProxyVOName =!= "atlas") && (x509UserProxyVOName =!= "cms") && (x509UserProxyVOName =!= "dune") && (x509UserProxyVOName =!= "mu3e");'
